(lang dune 1.10)
(using fmt 1.0)
(generate_opam_files true)
(name ghm)
(source (github pkel/ghm))
(license "none")
(authors "Patrik Keller")
(maintainers "Patrik Keller")

(package
  (name ghm)
  (synopsis "JSOO Booking Management")
  (description "A longer description")
  (depends
    (incr_dom (< v0.13))
    (incr_dom_partial_render :build)
    (incr_dom_widgets :build)
    (ppx_jane :build)
    (cmdliner :build)
    (ppx_deriving_cmdliner :build)
    (ppx_deriving_yojson (> 0))
    (tyxml :build)
    (gen_js_api :build)
    (csv :build)
    (base64 :build)
    (async_js :build)
    (cohttp-lwt-unix :build)
    (record_builder :build)
    (ocp-indent :build)
    (ocamlformat :build)
    (merlin :build)
    (utop :build)
    )
)
