(executable
 (name app)
 (libraries ghm core_kernel incr_dom incr_dom_widgets incr_dom_partial_render yojson)
 (preprocess (pps js_of_ocaml-ppx ppx_jane ppxlib.runner ppx_deriving_yojson)))

(rule
 (targets browser.ml)
 (deps browser.mli)
 (action (run ocamlfind gen_js_api/gen_js_api browser.mli)))

(ignored_subdirs (assets))
